# vector-database-learning

./: README.md
chromadb_example/: README.md  main.py  pyproject.toml
faiss/: main.py  pyproject.toml
food_search/: README.md  pyproject.toml
food_search/src/: app.py
food_search/src/modules/: advance_search.py  create_basic.py  create_chroma.py  llm_food_rag_search.py  load_food_data.py  search_food.py
langchain_examples/: README.md  main.py  pyproject.toml
langchain_examples/src/modules/: embeddings_model.py  llm_model.py  self-querying-retriever.py  splliter.py
